# advent-of-code-24

./: Cargo.toml
aoc24/src/: grid.rs
d1-historian-hysteria/: Cargo.toml
d1-historian-hysteria/src/: main.rs
d10-hoof-it/: Cargo.toml
d10-hoof-it/src/: main.rs
d11-plutonian-pebbles/: Cargo.toml
d11-plutonian-pebbles/src/: main.rs
d14-restroom-redoubt/: Cargo.toml
d14-restroom-redoubt/src/: main.rs
d2-red-nosed-reports/: Cargo.toml
d2-red-nosed-reports/src/: main.rs
d22-monkey-market/: Cargo.toml
d22-monkey-market/src/: main.rs
d3-mull-it-over/: Cargo.toml
d3-mull-it-over/src/: main.rs
d4-ceres-search/: Cargo.toml
d4-ceres-search/src/: main.rs
d5-print-queue/: Cargo.toml
d5-print-queue/src/: main.rs
d6-guard-gallivant/: Cargo.toml
d6-guard-gallivant/src/: main.rs
d7-bridge-repair/: Cargo.toml
d7-bridge-repair/src/: main.rs
d8-resonant-collinearity/: Cargo.toml
d8-resonant-collinearity/src/: main.rs
d9-disk-fragmenter/: Cargo.toml
d9-disk-fragmenter/src/: main.rs
